--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,12 +11,40 @@
 }
 
 #header{
-   grid-column: 2 / 3; 
+   grid-column: 2 / 3;
+   grid-template-columns: 3fr 2fr;
+   grid-template-rows: 1fr 1fr;
+}
+
+#user{
+    grid-row: 2 / 3;
+}
+
+#user-buttons{
+    grid-row: 1 / 3;
+}
+
+#header > div{
+    border: 1px solid black;
+    display: grid;
 }
 
 #sidebar{
     grid-row: 1 / 3;
+    grid-template-columns: 1fr 4fr;
     grid-template-rows: 1fr 3fr 4fr;
+}
+
+#dash-logo{
+    grid-row: 1 / 2;
+}
+
+#nav-logo{
+    grid-row: 2 / 3;
+}
+
+#settings-logo{
+    grid-row: 3 / 4;
 }
 
 #sidebar > div{
