--- a/stylesheet.css
+++ b/stylesheet.css
@@ -40,7 +40,7 @@
 
 #user-buttons{
     grid-row: 1 / 3;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 3fr 2fr 4fr;
     grid-template-rows: 1fr 1fr;
 }
 
@@ -49,7 +49,14 @@
 }
 
 #buttons{
-    grid-column: 1 / 3;
+    grid-column: 1 / 4;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+#buttons > button{
+    margin: 20px 10px 20px 10px ;
+    border-radius: 30px;
 }
 
 #header > div{
@@ -84,8 +91,8 @@ ul{
 }
 
 #main-content{
-    grid-template-columns: 2fr 1fr;
-    grid-template-rows: 2fr 1fr;
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: 1fr 4fr 1fr 3fr;
 }
 
 #main-content > div{
@@ -93,13 +100,8 @@ ul{
     display: grid;
 }
 
-#projects{
-    grid-row: 1 / 3;
-    grid-template-rows: 1fr 10fr;
-}
-
-#projects > div{
-    border: 1px solid black;
+#projects-content{
+    grid-row: 2/5;
 }
 
 #content-cards{
@@ -112,10 +114,19 @@ ul{
     border: 1px solid black;
 }
 
-#announcements{
-    grid-template-rows: 1fr 7fr;
+#announ-content{
+
 }
 
-#announcements > div{
+#announ-content > div{
     border: 1px solid black;
 }
+
+#trend-content{
+
+}
+
+#trend-content > div{
+    border: 1px solid black;
+}
+
