--- a/stylesheet.css
+++ b/stylesheet.css
@@ -92,7 +92,7 @@ ul{
 
 #main-content{
     grid-template-columns: 3fr 1fr;
-    grid-template-rows: 1fr 4fr 1fr 3fr;
+    grid-template-rows: 1fr 6fr 1fr 5fr;
 }
 
 #main-content > div{
@@ -108,6 +108,8 @@ ul{
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
+    gap: 15px;
+    margin: 15px;
 }
 
 #content-cards > div{
