--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,10 @@
+:root{
+   --blue:  #37a5ee;
+   --white: #fafafa;
+   --orange: #fbbf24;
+   --grey: #d1d5db;
+}
+
 #outer-grid, #outer-grid > div{
     border: 1px solid black;
     display: grid;
@@ -14,6 +21,7 @@
    grid-column: 2 / 3;
    grid-template-columns: 3fr 2fr;
    grid-template-rows: 4fr 5fr;
+   background-color: var(--white);
 }
 
 #search-bar{
@@ -57,6 +65,7 @@
 #buttons > button{
     margin: 20px 10px 20px 10px ;
     border-radius: 30px;
+    background-color: var(--blue);
 }
 
 #header > div{
@@ -68,6 +77,7 @@
     grid-row: 1 / 3;
     grid-template-columns: 1fr 4fr;
     grid-template-rows: 1fr 3fr 4fr;
+    background-color: var(--blue);
 }
 
 #dash-logo{
@@ -93,6 +103,7 @@ ul{
 #main-content{
     grid-template-columns: 3fr 1fr;
     grid-template-rows: 1fr 6fr 1fr 5fr;
+    background-color: var(--grey);
 }
 
 #main-content > div{
@@ -116,6 +127,10 @@ ul{
     border: 1px solid black;
 }
 
+.cards{
+    background-color: var(--white);
+}
+
 #announ-content{
 
 }
@@ -124,12 +139,20 @@ ul{
     border: 1px solid black;
 }
 
+.announ-cards{
+    background-color: var(--white);
+}
+
 #trend-content{
 
 }
 
 #trend-content > div{
     border: 1px solid black;
+}
+
+.trend-cards{
+    background-color: var(--white);
 }
 
 .icon{
