--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,7 +10,7 @@ body{
 }
 
 #outer-grid, #outer-grid > div{
-    border: 1px solid black;
+    /* border: 1px solid black; */
     display: grid;
 }
 
@@ -33,7 +33,7 @@ body{
 }
 
 #search-bar > div{
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 
 #user{
@@ -43,7 +43,7 @@ body{
 }
 
 #user > div{
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 
 #user-icon{
@@ -57,7 +57,7 @@ body{
 }
 
 #user-buttons > div{
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 
 #buttons{
@@ -73,7 +73,7 @@ body{
 }
 
 #header > div{
-    border: 1px solid black;
+    /* border: 1px solid black; */
     display: grid;
 }
 
@@ -97,7 +97,7 @@ body{
 }
 
 #sidebar > div{
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 
 ul{
@@ -111,7 +111,7 @@ ul{
 }
 
 #main-content > div{
-    border: 1px solid black;
+    /* border: 1px solid black; */
     display: grid;
 }
 
@@ -222,7 +222,33 @@ ul{
 
 .trend-cards{
     background-color: var(--white);
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: 1fr 1fr;
 }
+
+.trend-cards > p{
+    font-size: 8px;
+    margin: 0;
+}
+
+.trend-cards > h5{
+    margin: 0px;
+}
+
+.trend-cards > div{
+    grid-row: 1 / 3;
+}
+
+.trend-icon{
+    border: 1px solid black;
+    border-radius: 50%;
+    display: flex;
+    justify-self: center;
+    flex-direction: column;
+    margin-top: 2px;
+}
+
 
 .icon{
    width: 20px; 
