--- a/stylesheet.css
+++ b/stylesheet.css
@@ -38,7 +38,7 @@
  
  #user{
      grid-row: 2 / 3;
-     grid-template-columns: 1fr 4fr;
+     grid-template-columns: 1fr 5fr;
      grid-row: 1fr 2fr;
  }
  
@@ -48,6 +48,9 @@
  
  #user-icon{
      grid-row: 1/3;
+     display: flex;
+     justify-content: center;
+     flex-direction: column;
  }
  
  #user-buttons{
@@ -70,6 +73,12 @@
      margin: 20px 10px 20px 10px ;
      border-radius: 30px;
      background-color: var(--blue);
+ }
+
+ #icon{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
  }
  
  #header > div{
@@ -272,7 +281,8 @@
  
  
  .icon{
-    width: 20px; 
+    width: 20px;
+    align-self: flex-end; 
  }
  
  .profile-icon{
@@ -281,17 +291,26 @@
  }
  
  #morgan{
-     width: 75px;
+     width: 55px;
+     margin: 4px;
+     margin-left: 6px;
  }
  
  #user-morgan{
      width: 50px;
+     margin: 6px;
  }
  
  #bar-shape{
-     height: 2rem;
+     height: 1.5rem;
      width: 25rem;
      background-color: var(--grey);
      border-radius: 16px;
+ }
+
+ #bar{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
  }
  
