--- a/stylesheet.css
+++ b/stylesheet.css
@@ -91,22 +91,67 @@
      grid-template-columns: 1fr 4fr;
      grid-template-rows: 1fr 3fr 4fr;
      background-color: var(--blue);
+     padding-left: 10px;
  }
  
  #dash-logo{
      grid-row: 1 / 2;
+     display: flex;
+     justify-content: flex-start;
+     flex-direction: column;
+ }
+
+ #dash-logo > img{
+    margin-top: 10px;
  }
  
  #nav-logo{
      grid-row: 2 / 3;
+     display: flex;
+     flex-direction: column;
+     justify-content: flex-start;
+     gap: 15px;
  }
  
  #nav-logo > .icon{
-     /* need to change the colour */
+    align-self: center;
+ }
+
+ #nav > ul{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 15px;
+    margin: 0;
+ }
+
+ #nav > ul > li{
+    align-self: flex-start;
+    height: 20px;
  }
  
  #settings-logo{
      grid-row: 3 / 4;
+     display: flex;
+     flex-direction: column;
+     justify-content: flex-start;
+     gap: 15px;
+ }
+
+ #settings-logo > img{
+    align-self: center;
+ }
+
+ #settings > ul{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 15px;
+    margin: 0;
+ }
+
+ #settings > ul > li{
+    height: 20px;
  }
  
  #sidebar > div{
@@ -142,6 +187,7 @@
  
  #content-cards > div{
      border: 1px solid black;
+     border-left: 5px solid var(--orange);
  }
  
  .cards{
@@ -314,3 +360,8 @@
     flex-direction: column;
  }
  
+ #notif{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+ }
