--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,7 +2,7 @@
     --blue:  #37a5ee;
     --white: #fafafa;
     --orange: #fbbf24;
-    --grey: #d1d5db;
+    --grey: #dde1e6;
  }
  
  body{
@@ -38,7 +38,7 @@
  
  #user{
      grid-row: 2 / 3;
-     grid-template-columns: 1fr 5fr;
+     grid-template-columns: 1fr 2fr 10fr;
      grid-row: 1fr 2fr;
  }
  
@@ -48,9 +48,20 @@
  
  #user-icon{
      grid-row: 1/3;
+     grid-column: 2/3;
      display: flex;
      justify-content: center;
      flex-direction: column;
+ }
+
+ #greeting{
+    grid-column: 3/4;
+    margin-bottom: 0;
+ }
+
+ #user-name{
+    grid-column: 3/4;
+    margin-top: 0;
  }
  
  #user-buttons{
@@ -102,6 +113,10 @@
      flex-direction: column;
  }
 
+ #dashboard > h3{
+    color: var(--white);
+ }
+
  #dash-logo > img{
     margin-top: 10px;
  }
@@ -130,6 +145,7 @@
  #nav > ul > li{
     align-self: flex-start;
     height: 20px;
+    color: var(--white);
  }
  
  #settings-logo{
@@ -155,6 +171,7 @@
 
  #settings > ul > li{
     height: 20px;
+    color: var(--white);
  }
  
  #sidebar > div{
@@ -342,8 +359,12 @@
  
  .icon{
     width: 20px;
-    align-self: flex-end; 
- }
+    align-self: flex-end;
+}
+
+.icon-colour{
+    filter: invert(87%) sepia(93%) saturate(53%) hue-rotate(160deg) brightness(122%) contrast(96%);
+}
  
  .profile-icon{
      border: 1px solid black;
@@ -351,14 +372,11 @@
  }
  
  #morgan{
-     width: 55px;
-     margin: 4px;
-     margin-left: 6px;
+     width: 50px;
  }
  
  #user-morgan{
      width: 50px;
-     margin: 6px;
  }
  
  #bar-shape{
@@ -372,6 +390,11 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
+    margin-right: 6px;
+ }
+
+ #bar > .icon{
+    justify-content: flex-start;
  }
  
  #notif{
